# deno-bindgen2

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
dev_docs/: naming-convention.md  types.md
docs/: background.md  limitations.md  roadmap.md  setup.md  todo.md
src/: lib.rs  mod.rs
src/mod/: generate.rs  ir.rs  parse.rs  transform.rs  util.rs
src/mod/parse/: fn.rs
tests/: example.rs
